2013-03-05  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Whitespace does not break a parenthesized variable name
    * Whitespace is stripped from if conditions
    * The condition of an if must be a valid variable name

2013-03-01  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Disabled line splicing

2013-02-28  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Non-parenthesized variable names can not contain a dollar sign
    * Trim leading empty line from if-statement body
    * Trim leading empty line from template body
    * Conditionals surrounded by whitespace on a line by themself are
    stripped of their surrounding whitespace including the newline
    * Remove empty lines after expansion if they contained a non-whitespace
    fragment before expansion

2013-02-26  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Printing of warnings to stderr can be disabled
    * Added conditional statements (if-then, if-then-else)
    * Added line splicing (\) in template body

2013-02-20  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Templates can now expand to a StringBuffer

2013-02-02 Jesper Öqvist <jesper@cs.lth.se>

    * Template expansion warnings are printed to stderr